cmake_minimum_required(VERSION 3.22)
project(CPP_HARDCORE)

set(CMAKE_CXX_STANDARD 17)

#add_executable(CPP_HARDCORE lesson1.cpp lesson1-src/PhoneBook.h lesson1-src/PhoneBook.cpp lesson1-src/PhoneBook.h lesson2.cpp)
#add_executable(CPP_HARDCORE lesson2.cpp Timer.cpp)
add_executable(CPP_HARDCORE lesson4.cpp)
